# StreamLens

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
dashboard/: app.py
data/: silver_titles.parquet
data/gold/: catalog_engagement.parquet  content_velocity.parquet  genre_performance.parquet  network_scorecard.parquet  trending_tracker.parquet
docs/: data_dictionary.md
src/streamlens/: database.py  pipeline.py
src/streamlens/ingest/: imdbLoader.py  tmdbClient.py
src/streamlens/transform/: bronze.py  gold.py  silver.py
tests/: test_gold.py  test_silver.py  test_tmdbClient.py
