[project]
name = "streamlens"
version = "0.1.0"
description = "A daily-refreshing content analytics pipeline for streaming data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.7",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
